<resources>
    <string name="app_name">BePresensi Mobile</string>
    <string name="title_home">Home</string>
    <string name="title_profil">Profil</string>
    <string name="title_riwayat">Riwayat</string>
    <string name="title_surat">Surat</string>

    <string name="dummy_matakuliah">Dasar - Dasar Pemrograman</string>
    <string name="dummy_waktu">07.00 – 08.40</string>
    <string name="title_waktu">Waktu:</string>
    <string name="title_dosen">Dosen:</string>
    <string name="dummy_dosen">Santi Sundari</string>
    <string name="title_hadir">Hadir:</string>
    <string name="dummy_hadir">2 dari 2 sesi</string>
    <string name="btn_presensi">Presensi</string>
    <string name="btn_detail_presensi">Detail Presensi</string>
    <string name="dummy_full_date">Senin, 30 Desember 2020</string>
    <string name="dummy_keterangan">Terdapat 4 matakuliah hari ini</string>
    <string name="dummy_date">1 Desember 2020</string>
    <string name="dummy_surat_izin">Surat Izin</string>
    <string name="title_kode">Kode:</string>
    <string name="title_status">Status:</string>
    <string name="dummy_kode_surat">SuratIzin0001</string>
    <string name="dummy_status_surat">Berhasil diproses</string>
    <string name="dummy_title_keterangan_surat">Terdapat 4 surat yang pernah diajukan</string>
    <string name="content_foto_surat">Foto Surat Izin</string>
    <string name="dummy_jenis_perkuliahan">Teori</string>
    <string name="dummy_range">1 Desember 2020 – 2 Januari 2020</string>
    <string name="tv_keterangan_riwayat">Menampilkan riwayat kehadiran minggu ini</string>
    <string name="dummy_role_mahasiswa">Mahasiswa</string>
    <string name="dummy_nama">Kovalevshero Al Fayyad Yafiano</string>
    <string name="dummy_nim">171511014</string>
    <string name="dummy_email">kovalevshero.al.tif17@polban.ac.id</string>
    <string name="title_rekapitulasi_kehadiran">Rekapitulasi Kehadiran</string>
    <string name="num_15">15</string>
    <string name="title_sakit">Sakit</string>
    <string name="title_izin">Izin</string>
    <string name="num_4">4</string>
    <string name="title_alfa">Alfa</string>
    <string name="num_0">0</string>
    <string name="title_status_only">Status</string>
    <string name="dummy_status_aman">Aman</string>
    <string name="title_atur_toleransi">Atur Toleransi Keterlambatan</string>
    <string name="title_keluar">Keluar</string>
    <string name="content_tambah_surat">Tambah Surat Baru</string>
    <string name="title_pilih_jenis_surat">Silahkan pilih jenis surat</string>
    <string name="label_email">Email</string>
    <string name="label_password">Password</string>
    <string name="label_login">Login</string>
    <string name="label_lupa_password">Lupa password?</string>
    <string name="title_lokasi">Lokasi:</string>
    <string name="dummy_lokasi">Ruang 1101</string>
    <string name="title_status_jadwal">Status:</string>
    <string name="dummy_status_done">Sudah selesai</string>
    <string name="btn_buka_sesi">Buka Sesi Presensi</string>
    <string name="btn_tutup_sesi">Tutup Sesi Presensi</string>
    <string name="btn_lihat_presensi">Lihat Presensi</string>
    <string name="btn_isi_berita_acara">Isi Berita Acara</string>
    <string name="dummy_arahan_lokasi">Silahkan masuk ke ruangan R219</string>
    <string name="dummy_status_beacon">Memindai beacon CB101</string>
    <string name="dummy_action_status">Menyimpan data presensi...</string>
    <string name="title_tanggal">Tanggal</string>
    <string name="title_kode_ruangan">Kode Ruangan</string>
    <string name="dummy_jam_mulai">07:00</string>
    <string name="title_sesi_ditutup">Sesi Ditutup</string>
    <string name="dummy_jam_berakhir">08:20</string>
    <string name="label_deskripsi_tatap_muka">Deskripsi Tatap Muka</string>
    <string name="label_deskripsi_penugasan">Deskripsi Penugasan</string>
    <string name="label_simpan_berita_acara">Simpan Berita Acara</string>
    <string name="dummy_date_1">31/12/2020</string>
    <string name="title_lihat_berita_acara">Lihat Berita Acara</string>
    <string name="title_mhs_tidak_hadir">Mhs Tidak Hadir</string>
    <string name="dummy_jumlah_mhs_hadir">28</string>
    <string name="dummy_jumlah_mhs_tidak_hadir">3</string>
    <string name="dummy_kode_sesi">Sesi 3</string>
    <string name="dummy_persentase_kehadiran">85%</string>
    <string name="title_pilih_sesi">Silahkan pilih sesi perkuliahan</string>
    <string name="dummy_subtitle_sesi">Sesi 2 perkuliahan</string>
    <string name="dummy_status_hadir">Dispensasi</string>
    <string name="title_hadir_only">Hadir</string>
    <string name="title_simpan_perubahan">Simpan Perubahan</string>
    <string name="title_ruangan">Ruangan</string>
    <string name="dummy_kode_ruangan">R202</string>
    <string name="title_tgl_presensi">Tgl Presensi</string>
    <string name="subtitle_detail_kehadiran">Detail kehadiran setiap sesi</string>
    <string name="title_jumlah_sesi">Jumlah Sesi</string>
    <string name="title_sesi_dihadiri">Sesi Dihadiri</string>
    <string name="dummy_jml_sesi_dihadiri">3 Sesi</string>
    <string name="dummy_jml_sesi">4 Sesi</string>
    <string name="title_sesi_perkuliahan">Sesi Perkuliahan</string>
    <string name="title_sesi_dibuka">Sesi Dibuka</string>
    <string name="dummy_sesi_dibuka">07:00</string>
    <string name="title_jam_presensi">Jam Presensi</string>
    <string name="dummy_jam_presensi">07:08</string>
    <string name="title_status_presensi">Status Presensi</string>
    <string name="title_kode_surat_izin">Kode Surat Izin</string>
    <string name="title_jam_mulai">Jam Mulai</string>
    <string name="jam_berakhir">Jam Berakhir</string>
    <string name="title_catatan">Catatan</string>
    <string name="title_jam_selesai">Jam Selesai</string>
    <string name="title_tanggal_selesai">Tanggal Selesai</string>
    <string name="title_tanggal_mulai">Tanggal Mulai</string>
    <string name="title_ajukan">Ajukan</string>
    <string name="title_sepanjang_hari">Sepanjang Hari</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_surat_diajukan">Surat Diajukan</string>
    <string name="title_surat_diproses">Surat Diproses</string>
    <string name="title_catatan_izin">Catatan Izin</string>
    <string name="title_catatan_wali_dosen">Catatan Wali Dosen</string>
    <string name="title_tolak">Tolak</string>
    <string name="title_setuju">Setuju</string>
    <string name="title_nama">Nama:</string>
    <string name="dummy_toleransi_waktu">Toleransi 10 menit</string>
    <string name="dummy_hari">Kamis</string>
    <string name="dummy_jadwal_diampu">Terdapat 5 jadwal yang diampu</string>
    <string name="dummy_kode_kelas">D3B2018</string>
    <string name="dummy_kelas_lokasi">D3B2017 - R202</string>
    <string name="title_hari">Hari</string>
    <string name="title_kelas">Kelas</string>
    <string name="title_toleransi_keterlambatan">Toleransi Keterlambatan</string>
    <string name="dummy_toleransi_telat">10 Menit</string>
    <string name="title_activity_splashscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_bepresensi">BePresensi</string>
</resources>
