<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardSurat"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/def_margin_near"
    android:layout_marginEnd="@dimen/def_margin_near"
    android:layout_marginBottom="@dimen/def_margin_near"
    app:cardElevation="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@id/imgSuratIzin"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Title, secondary and supporting text -->
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvJenisSurat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/dummy_surat_izin"
                android:textAppearance="?attr/textAppearanceOverline" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvTglSurat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="marquee"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:text="@string/dummy_date"
                android:textAppearance="?attr/textAppearanceHeadline5" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/def_margin_top">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/def_margin_near"
                        android:text="@string/title_kode"
                        android:textAppearance="?attr/textAppearanceBody2"
                        android:textColor="?android:attr/textColorSecondary" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tvWaktu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ellipsize="marquee"
                        android:scrollHorizontally="true"
                        android:singleLine="true"
                        android:text="@string/dummy_kode_surat"
                        android:textAppearance="?attr/textAppearanceBody2"
                        android:textColor="?android:attr/textColorSecondary" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/def_margin_near">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/def_margin_near"
                        android:text="@string/title_status"
                        android:textAppearance="?attr/textAppearanceBody2"
                        android:textColor="?android:attr/textColorSecondary" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tvDosenPengajar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ellipsize="marquee"
                        android:scrollHorizontally="true"
                        android:singleLine="true"
                        android:text="@string/dummy_status_surat"
                        android:textAppearance="?attr/textAppearanceBody2"
                        android:textColor="?android:attr/textColorSecondary" />
                </TableRow>
            </TableLayout>
        </LinearLayout>

        <ImageView
            android:id="@+id/imgSuratIzin"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/def_margin_right"
            android:src="@color/colorAccent"
            android:contentDescription="@string/content_foto_surat"/>
    </RelativeLayout>
</com.google.android.material.card.MaterialCardView>
